<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bat_dau">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chao3"
        android:textColor="@color/dotuoi"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="70sp"
        android:id="@+id/txtTen"/>
    <EditText
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_toEndOf="@+id/txtTen"/>
    <TextView
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuoi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="110sp"
        android:id="@+id/txtTuoi"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105sp"
        android:layout_toEndOf="@id/txtTuoi"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cao"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="150sp"
        android:id="@+id/txtCao"/>
    <EditText
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145sp"
        android:layout_toEndOf="@id/txtCao"
        android:id="@+id/edtCao"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nang"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="190sp"
        android:id="@+id/txtNang"/>
    <EditText
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="185sp"
        android:layout_toEndOf="@id/txtNang"
        android:id="@+id/edtNang"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chiso"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="230sp"
        android:id="@+id/txtChiSo1"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="230sp"
        android:layout_toEndOf="@id/txtChiSo1"
        android:id="@+id/txtChiso"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/danhgia"
        android:layout_marginTop="270sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/txtDanhGia1"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="270sp"
        android:layout_toEndOf="@id/txtDanhGia1"
        android:id="@+id/txtDanhGia"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kiemtra"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="350sp"
        android:layout_alignParentStart="true"
        android:id="@+id/btnKT"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nhaplai"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="350sp"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnReset"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuvan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="400sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnTV"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tungcho"
        android:id="@+id/imageView8"
        android:layout_alignTop="@+id/btnTV"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>